Bug 99303 - [REGRESSION][BISECTED] DMs are crashing on start with "radeon"
Summary: [REGRESSION][BISECTED] DMs are crashing on start with "radeon"
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
: 99307 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-01-06 18:46 UTC by Hi-Angel
Modified: 2017-01-06 22:39 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
possible fix (1.07 KB, patch)
2017-01-06 21:25 UTC, Marek Olšák
Details | Splinter Review

Description Hi-Angel 2017-01-06 18:46:22 UTC
As of the commit

	9a3296bf1cf8d45349b14b31eeb0d81f8b8774fc radeonsi: use SDMA for initial clearing of DCC/CMASK/HTILE on CIK-VI

, SDDM crashes on start. The same with GDM, though I bisect-tested mostly with SDDM. The system log says:

	systemd[1]: Started User Manager for UID 996.
	sddm[513]: Greeter session started successfully
	sddm-greeter[584]: Reading from "/usr/share/xsessions/awesome.desktop"
	sddm-greeter[584]: Reading from "/usr/share/xsessions/enlightenment.desktop"
	sddm-greeter[584]: Reading from "/usr/share/xsessions/gnome-classic.desktop"
	sddm-greeter[584]: Reading from "/usr/share/xsessions/gnome-xorg.desktop"
	sddm-greeter[584]: Reading from "/usr/share/xsessions/gnome.desktop"
	sddm-greeter[584]: Reading from "/usr/share/xsessions/i3-with-shmlog.desktop"
	sddm-greeter[584]: Reading from "/usr/share/xsessions/i3.desktop"
	sddm-greeter[584]: Reading from "/usr/share/xsessions/plasma-mediacenter.desktop"
	sddm-greeter[584]: Reading from "/usr/share/xsessions/plasma.desktop"
	sddm-greeter[584]: Reading from "/usr/share/wayland-sessions/gnome.desktop"
	sddm-greeter[584]: Reading from "/usr/share/wayland-sessions/sway.desktop"
	sddm-greeter[584]: Connected to the daemon.
	sddm[513]: Message received from greeter: Connect
	sddm-greeter[584]: Loading qrc:/theme/Main.qml...
	sddm-greeter[584]: Adding view for "HDMI-0" QRect(0,0 1920x1080)
	systemd[577]: Started D-Bus User Message Bus.
	sddm-greeter[584]: Message received from daemon: Capabilities
	sddm-greeter[584]: Message received from daemon: HostName
	kernel: sddm-greeter[584]: segfault at 0 ip           (null) sp 00007fffbb3c12e8 error 14 in sddm-greeter[400000+8e000]
	systemd[1]: Created slice system-systemd\x2dcoredump.slice.
	systemd[1]: Started Process Core Dump (PID 593/UID 0).
	sddm-helper[575]: [PAM] Closing session
	sddm-helper[575]: pam_unix(sddm-greeter:session): session closed for user sddm
	sddm-helper[575]: [PAM] Ended.
	sddm[513]: Auth: sddm-helper exited with 11
	sddm[513]: Greeter stopped.
	systemd-logind[481]: Removed session c1.
	systemd[1]: Stopping User Manager for UID 996...
	systemd[577]: Stopped target Default.
	systemd[577]: Stopping D-Bus User Message Bus...
	systemd[577]: Stopped D-Bus User Message Bus.
	systemd[577]: Stopped target Basic System.
	systemd[577]: Stopped target Paths.
	systemd[577]: Stopped target Timers.
	systemd[577]: Stopped target Sockets.
	systemd[577]: Closed Sound System.
	systemd[577]: Closed D-Bus User Message Bus Socket.
	systemd[577]: Reached target Shutdown.
	systemd[577]: Starting Exit the Session...
	systemd[577]: Received SIGRTMIN+24 from PID 597 (kill).
	systemd[578]: pam_unix(systemd-user:session): session closed for user sddm
	systemd[1]: Stopped User Manager for UID 996.
	systemd[1]: Removed slice User Slice of sddm.
	systemd-coredump[594]: Process 584 (sddm-greeter) of user 996 dumped core.
															 
															 Stack trace of thread 584:
															 #0  0x0000000000000000 n/a (n/a)

GPU: Radeon HD5730 (note, its driver is rather radeon than radeonsi)
Comment 1 Alex Deucher 2017-01-06 21:08:43 UTC
*** Bug 99307 has been marked as a duplicate of this bug. ***
Comment 2 Marek Olšák 2017-01-06 21:25:45 UTC
Created attachment 128802 [details] [review]
possible fix

Would you please try this patch?
Comment 3 MWATTT 2017-01-06 21:39:58 UTC
This patch works for me (tried on glxgears). Thanks.
Comment 4 Hi-Angel 2017-01-06 22:16:24 UTC
Thank you, worked for me too!
Comment 5 Marek Olšák 2017-01-06 22:39:54 UTC
Fixed by aead6a1e947af84b0af2853c204d5cad6d92bfff. Closing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.